add autoloading to composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
     "require": {
         "pusher/pusher-php-server": "~3.0"
     },
+    "autoload": {
+        "psr-4": {
+            "BertBijnens\\LaravelAnalytics\\": "src/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
